更新專案進度：優化索引、更新配置和前端組件

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,19 @@ Thumbs.db
 htmlcov/
 .tox/
 
+# Documentation and reports
+*.md
+*.MD
+!README.md
+
+# LaTeX compilation files
+*.aux
+*.log
+*.out
+*.toc
+*.pdf
+*.tex
+
+# Delivery and checklist files
+DELIVERY_CHECKLIST.txt
+IMPLEMENTATION_COMPLETION_CERTIFICATE.txt
